mouseclick: Also decorate tablet events

BUG: 426584